# holographic-cosmo-engine

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  quick_ekg_coupled.py  quick_ekg_coupled_phase2.py  quick_smoke.py  quick_smoke_ekg.py  quick_smoke_ekg_learny.py  quick_spectrum_sparse.py  run_analysis_ekg.py
.github/workflows/: ci.yml
configs/: minimal.yaml  phase2.yaml
enhanced_runs/notebook_test/: spectrum_mapped_meta.json  spectrum_meta.json
enhanced_runs/sparse_demo/: sparse_meta.json
src/: spectrum.py  spectrum_sparse.py
src/analysis/: __init__.py  ekg_analysis.py
src/cosmo/: hce_chi2.py
src/ekg/: pinn_solver.py  pinn_solver_ekg.py  system.py  system_backup_20250829_051712.py
src/hce/: __init__.py  cli.py  config.py  engine.py
src/holographic_cosmo_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_imports.py
